--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,8 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-*.c linguist-detectable=false
-*.cpp lingust-detectable=true
+*.h linguist-language=C++
+*.cpp linguist-language=C++
 
 ###############################################################################
 # Set default behavior for command prompt diff.
